connection string changes

--- a/CleanArchitectureDemo.API/appsettings.json
+++ b/CleanArchitectureDemo.API/appsettings.json
@@ -8,7 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
   "DefaultConnection": "Server=127.0.0.1,1433;Database=CleanArchDb;User Id=sa;Password=YourStrong@Passw0rd;Encrypt=False;TrustServerCertificate=True;",
-  "PostgressConnection": "Host=localhost;Port=5432;Database=FirstPostgressDB;Username=postgres;Password=mysecretpassword"
+  "PostgressConnection": "Host=localhost;Port=5432;Database=FirstPostgressDB;Username=postgres;Password=mysecretpassword",
+  "PostgressConnections": "Host=dpg-d0b757qdbo4c73cg5o5g-a.onrender.com;Port=5432;Database=ExpenseApp;Username=echovik;Password=ByhasQyVJTlI67r6nllokqZqwtd06JVi",
+  "liveposgress":"postgresql://echovik:ByhasQyVJTlI67r6nllokqZqwtd06JVi@dpg-d0b757qdbo4c73cg5o5g-a.oregon-postgres.render.com/internal_db_123abc"
+
 
 }
 }
